# unosquare-web-scrapping

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: Dockerfile  requirements.txt
app/app/: main.py  requirements.txt
app/app/api/v1/: api.py
app/app/api/v1/endpoints/: test.py  web_scrapping.py
app/app/core/: config.py
app/app/schemas/: __init__.py  web_scrapping.py
app/app/services/: main.py  web_scrapping.py
app/app/tests/: web_scrapping_test.py
