[tool.poetry]
name = "unosquare-web-scrapping"
version = "0.1.0"
description = ""
authors = ["Sergio Vargas <sergiovl219@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
uvicorn = "^0.19.0"
urllib3 = "^1.26.12"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
